# mlflow-onnx-rust

./: .gitignore  Cargo.toml  README.md  requirements.txt
fastapi/: main.py  onnx_converstion.py  onnx_request.py
load_testing/: test_onnx.py  test_without_onnx.py
load_testing/configs/: pytorch_onnx.conf  pytorch_without_onnx.conf  sklearn_decision_tree_onnx.conf  sklearn_decision_tree_without_onnx.conf  sklearn_logistc_regression_onnx.conf  sklearn_logistc_regression_without_onnx.conf  sklearn_random_forest_onnx.conf  sklearn_random_forest_without_onnx.conf  xgboost_onnx.conf  xgboost_without_onnx.conf
load_testing/results/: pytorch_onnx_stats.csv  pytorch_onnx_stats_history.csv  pytorch_without_onnx_stats.csv  pytorch_without_onnx_stats_history.csv  sklearn_decision_tree_onnx_stats.csv  sklearn_decision_tree_onnx_stats_history.csv  sklearn_decision_tree_without_onnx_stats.csv  sklearn_decision_tree_without_onnx_stats_history.csv  sklearn_logistc_regression_onnx_stats.csv  sklearn_logistc_regression_onnx_stats_history.csv  sklearn_logistc_regression_without_onnx_stats.csv  sklearn_logistc_regression_without_onnx_stats_history.csv  sklearn_random_forest_onnx_stats.csv  sklearn_random_forest_onnx_stats_history.csv  sklearn_random_forest_without_onnx_stats.csv  sklearn_random_forest_without_onnx_stats_history.csv  xgboost_onnx_stats.csv  xgboost_onnx_stats_history.csv  xgboost_without_onnx_stats.csv  xgboost_without_onnx_stats_history.csv
notebooks/: compare-load-tests.ipynb  tabular-binary-classification.ipynb
src/: main.rs
