[package]
name = "mlflow_onnx_model_serving"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Bloss <zacharybloss@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tract-onnx = "0.16.1"
rand = "0.8.4"
